# show-source

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  ReadMe.rst  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/show_source/: __init__.py  show_source.py
pelican/plugins/test/: test_show_source.py
pelican/plugins/test/data/: pelicanconf.py  pelicanconf_autoext_false.py  pelicanconf_autoext_true.py
pelican/plugins/test/data/content/articles/: first.md  second.md  third.md
pelican/plugins/test/data/templates/: article.html
